...
    Rename,
    Delete,
    PickerAppend,
    PickerInlineCreate,
    BrowserAppend,
    Remove,
    Reorder,
}

enum class PlaylistMutationDecision {
    CloseModal,
    RetainModalWithFailure,
    CloseConfirmationAndRoute,
...
